<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SixthActivity">

    <fragment
        android:id="@+id/fragmentTable7"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="520dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragmentTable6"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="470dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragmentTable5"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragmentTable4"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="370dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:onClick="addRowTable2"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="80dp"
        android:onClick="deleteRowTable2"
        android:text="@string/delete"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/backgroundtable"
        android:gravity="center"
        android:text="@string/lossTable2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/backgroundtable"
        android:gravity="center"
        android:text="@string/actionTable2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/backgroundtable"
        android:gravity="center"
        android:text="@string/data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/design_default_color_error"
        android:onClick="sendData"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonBack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="backPage"
        android:text="@string/back"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/dziennikZdarzen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dziennikZdarzen" />

    <fragment
        android:id="@+id/fragmentTable1"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragmentTable2"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragmentTable3"
        android:name="com.zadanierekrutacyjne.Activities.FragmentTable2"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>